--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -4,6 +4,6 @@
 {{> post-details}}
 {{/each}}
 
-<button id='newPost' class='btn btn-success mx-3'>+ New Post</button>
+<button id='newPost' class='btn btn-success mx-3'>Add New Post</button>
 
 <script src="/js/dashboard.js"></script>
