updated comments and serverjs

--- a/views/partials/comment-details.handlebars
+++ b/views/partials/comment-details.handlebars
@@ -25,8 +25,8 @@
     </div>
     {{!-- comment delete buttons - front end --}}
     <div class="d-flex justify-content-start mt-2 mb-2">
-      <button id="update-comment" class="btn btn-success mx-3">Update</button>
-      <button id="delete-comment" class="btn btn-danger mx-3">Delete</button>
+      <button data-cid={{id}} id="update-comment" class="btn btn-success mx-3">Update</button>
+      <button data-cid={{id}} id="delete-comment" class="btn btn-danger mx-3">Delete</button>
     </div>
   </div>
 </div>
